--- a/app.json
+++ b/app.json
@@ -30,7 +30,14 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends.",
+          "cameraPermission": "Allow R-Hunt to access your camera."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
