--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-paper": "^5.11.1",
-    "react-native-safe-area-context": "^4.6.3",
     "react-native-link": "^4.1.0",
     "react-native-maps": "^1.8.0",
+    "react-native-paper": "^5.11.1",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
