--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-native-link": "^4.1.0",
     "react-native-maps": "1.7.1",
     "react-native-paper": "^5.11.1",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "expo-camera": "~13.4.4",
