1. Made it so that you don't crash every time you enter a non number in the create game field where you're supposed to enter number 2. Unified the headers so that the displays on iphone and pixel 7 pro would be the same, in the past the header was for some reason to the side on the pixel 7 pro and not at center

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-web": "~0.19.6",
     "expo-camera": "~13.4.4",
     "expo-image-picker": "~14.3.2",
-    "expo-image-manipulator": "~11.3.0"
+    "expo-image-manipulator": "~11.3.0",
+    "expo-asset": "~8.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
