--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@firebase/storage-types": "^0.8.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~49.0.18",
+    "expo": "^49.0.21",
+    "expo-asset": "~8.10.1",
+    "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
     "expo-router": "^2.0.0",
@@ -39,11 +43,7 @@
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-camera": "~13.4.4",
-    "expo-image-picker": "~14.3.2",
-    "expo-image-manipulator": "~11.3.0",
-    "expo-asset": "~8.10.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
